--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -6,4 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".DriverActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="128dp"
+        tools:layout_editor_absoluteY="231dp"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="233dp"
+            android:text="Drive to pickup spot"
+            tools:layout_editor_absoluteX="130dp"
+            tools:layout_editor_absoluteY="230dp" />
+
+    </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
